

export default class Observer {

    update() {
        throw new Error('Method "update()" must be implemented.');
    }
}
