@startuml
'https://plantuml.com/class-diagram

class Sujet{
    isOn : boolean
    subscribe(Observer)
    unSubscribe(Observer)
    notifier()
}

interface Observer {
    update()
}

Sujet -> "*" Observer

class Switch {
    comute()
}

Sujet <|-- Switch

class Or {
    update()
}

Sujet "a,b" <- Or
Sujet <|-- Or
Observer <|... Or

class Light {
    update()
}

Observer <|.. Light
Sujet "1" <- Light
@enduml
